--- a/_includes/date_format.html
+++ b/_includes/date_format.html
@@ -10,6 +10,6 @@ Here, add language specific date formats
 
 {% if site.lang == 'en' %}
 {% t month %} {{day}}, {{year}}
-{% elsif site.lang == 'pt-br' %}
-{{day}} de {% t month %}, {{year}}
+{% elsif site.lang == 'fr' %}
+{{day}} {% t month %} {{year}}
 {% endif %}
