--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,7 @@
           alt="project thumbnail" -%}
         {%- endif %}
         <div class="card-body">
-          <h2 class="card-title text-lowercase">{% t project.title %}</h2>
+          {% t project.title %}
           <p class="card-text">{% t project.description %}</p>
           <div class="row ml-1 mr-1 p-0">
             {%- if project.github -%}
