--- a/_includes/reading_time.html
+++ b/_includes/reading_time.html
@@ -1,5 +1,5 @@
 {% if site.lang == 'en' %}
 {{ include.read_time }} min read
-{% elsif site.lang == 'pt-br' %}
+{% elsif site.lang == 'fr' %}
 Leitura de {{ include.read_time }} min
 {% endif %}
