--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -856,3 +856,94 @@ pre {
     opacity: 1;
   }
 }
+
+
+// Footer
+.bd-footer {
+  border-top: 1px solid var(--pst-color-border);
+  width: 100%
+}
+
+.bd-footer .bd-footer__inner {
+  display: flex;
+  flex-grow: 1;
+  margin: auto;
+  padding: 1rem
+}
+
+.bd-footer .footer-items__end,.bd-footer .footer-items__start {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  justify-content: center
+}
+
+.bd-footer .footer-items__end {
+  margin-left: auto
+}
+
+.bd-footer .footer-item p {
+  margin-bottom: 0
+}
+
+.bd-footer-article {
+  display: flex;
+  margin-top: auto
+}
+
+
+// Previous/Next area
+.prev-next-area {
+  width: 100%
+}
+
+.prev-next-area p {
+  line-height: 1.3em;
+  margin: 0 .3em
+}
+
+.prev-next-area i {
+  font-size: 1.2em
+}
+
+.prev-next-area a {
+  align-items: center;
+  border: none;
+  color: var(--pst-color-text-muted);
+  display: flex;
+  max-width: 45%;
+  overflow-x: hidden;
+  padding: 10px;
+  text-decoration: none
+}
+
+.prev-next-area a p.prev-next-title {
+  color: var(--global-theme-color);
+  font-size: 1.0em;
+  font-weight: var(--pst-admonition-font-weight-heading)
+}
+
+.prev-next-area a:hover p.prev-next-title {
+  text-decoration: underline
+}
+
+.prev-next-area a .prev-next-info {
+  flex-direction: column;
+  margin: 0 .5em
+}
+
+.prev-next-area a .prev-next-info .prev-next-subtitle {
+  text-transform: capitalize
+}
+
+.prev-next-area a.left-prev {
+  float: left
+}
+
+.prev-next-area a.right-next {
+  float: right
+}
+
+.prev-next-area a.right-next div.prev-next-info {
+  text-align: right
+}
